# dnaencoder

./: .gitignore  Cargo.toml  README.md  bot_config.json  engine.js  explain.js  gc-optimizer.js  helix_simulator_config.json  helixarchivecli.rs  helixarchivelib.rs  index.html  journal.md  radiation.js  rs.js  script.py
files/: .gitignore  Cargo.toml  README.md  engine.js  index.html  integration.rs  lib.rs  main.rs  radiation.js  script.py  throughput.rs
src/: lib.rs
