[package]
name = "helix_archive"
version = "1.0.0"
edition = "2021"
description = "HelixArchive — High-performance DNA Data Storage Engine"
authors = ["Stardance Engineering Challenge"]

[lib]
name = "helix_archive"
path = "src/lib.rs"

[[bin]]
name = "helix_cli"
path = "src/main.rs"

[dependencies]
rayon = "1.7"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"