[package]
name = "helix_archive"
version = "1.0.0"
edition = "2021"
description = "HelixArchive — High-performance DNA Data Storage Engine"
authors = ["Stardance Engineering Challenge"]
license = "MIT"
readme = "README.md"
keywords = ["dna", "encoding", "bioinformatics", "storage"]
categories = ["encoding", "science"]

[lib]
name = "helix_archive"
path = "src/lib.rs"

[[bin]]
name = "helix_cli"
path = "src/main.rs"

[dependencies]
rayon    = "1.7"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "throughput"
harness = false

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"

[profile.bench]
opt-level = 3
